Fixed some locale stuff

--- a/src/main/resources/locale/locale_da.properties
+++ b/src/main/resources/locale/locale_da.properties
@@ -154,16 +154,16 @@ Mining.Blast.Radius.Increase=[[RED]]Eksplosions Radius For\u00f8gelse: [[YELLOW]
 Mining.Blast.Rank=[[RED]]Blast Mining: [[YELLOW]] Rank {0}/8 [[GRAY]]({1})
 Mining.Blast.Other.On=[[GREEN]]{0}[[DARK_GREEN]] has used [[RED]]Blast Mining!
 Mining.Blast.Refresh=[[GREEN]]Your [[YELLOW]]Blast Mining [[GREEN]]ability is refreshed!
-Repair.Effects.0=Reparer
-Repair.Effects.1=Repair Iron Tools & Armor
-Repair.Effects.2=Repair Mastery
-Repair.Effects.3=Increased repair amount
-Repair.Effects.4=Super Reparering
-Repair.Effects.5=Dobble effektivitet
-Repair.Effects.6=Diamond Repair ({0}+ SKILL)
-Repair.Effects.7=Reparer Diamant V\u00e6rkt\u00f8jer & udstyr
-Repair.Effects.8=Mystisk Smedning
-Repair.Effects.9=Reparer magiske genstande
+Repair.Effect.0=Reparer
+Repair.Effect.1=Repair Iron Tools & Armor
+Repair.Effect.2=Repair Mastery
+Repair.Effect.3=Increased repair amount
+Repair.Effect.4=Super Reparering
+Repair.Effect.5=Dobble effektivitet
+Repair.Effect.6=Diamond Repair ({0}+ SKILL)
+Repair.Effect.7=Reparer Diamant V\u00e6rkt\u00f8jer & udstyr
+Repair.Effect.8=Mystisk Smedning
+Repair.Effect.9=Reparer magiske genstande
 Repair.Listener.Anvil=[[DARK_RED]]Du har placeret en armbolt, armbolte kan reparere v\u00e6rkt\u00f8j og rustning.
 Repair.Listener=Reparer:
 Repair.SkillName=REPARER
