--- a/src/main/resources/locale/locale_de.properties
+++ b/src/main/resources/locale/locale_de.properties
@@ -154,16 +154,16 @@ Mining.Blast.Radius.Increase=[[RED]]Blast Radius Increase: [[YELLOW]]+{0}
 Mining.Blast.Rank=[[RED]]Blast Mining: [[YELLOW]] Rank {0}/8 [[GRAY]]({1})
 Mining.Blast.Other.On=[[GREEN]]{0}[[DARK_GREEN]] has used [[RED]]Blast Mining!
 Mining.Blast.Refresh=[[GREEN]]Deine [[YELLOW]]explosiv Bergbau [[GREEN]]F\u00e4higkeit ist erneuert!
-Repair.Effects.0=Reparieren
-Repair.Effects.1=Repariere Eisen Werkzeug & R\u00fcstungen
-Repair.Effects.2=Reparatur Beherrschung
-Repair.Effects.3=Increased repair amount
-Repair.Effects.4=Super Reparatur
-Repair.Effects.5=Doppelte Effektivit\u00e4t
-Repair.Effects.6=Diamant Reparatur ({0}+ SKILL)
-Repair.Effects.7=Repariere Diamant Werkzeug & R\u00fcstungen
-Repair.Effects.8=Arkane Schmiedekunst
-Repair.Effects.9=Repariere magische Gegenst\u00e4nde
+Repair.Effect.0=Reparieren
+Repair.Effect.1=Repariere Eisen Werkzeug & R\u00fcstungen
+Repair.Effect.2=Reparatur Beherrschung
+Repair.Effect.3=Increased repair amount
+Repair.Effect.4=Super Reparatur
+Repair.Effect.5=Doppelte Effektivit\u00e4t
+Repair.Effect.6=Diamant Reparatur ({0}+ SKILL)
+Repair.Effect.7=Repariere Diamant Werkzeug & R\u00fcstungen
+Repair.Effect.8=Arkane Schmiedekunst
+Repair.Effect.9=Repariere magische Gegenst\u00e4nde
 Repair.Listener.Anvil=[[DARK_RED]]Du hast einen Amboss plaziert, Ambosse k\u00f6nnen Waffen und R\u00fcstung reparieren.
 Repair.Listener=Reparieren:
 Repair.SkillName=Reparatur
