--- a/src/main/resources/locale/locale_es.properties
+++ b/src/main/resources/locale/locale_es.properties
@@ -154,16 +154,16 @@ Mining.Blast.Radius.Increase=[[RED]]Incrementado Radio de Explosi\u00f3n: [[YELL
 Mining.Blast.Rank=[[RED]]Blast Mining: [[YELLOW]] Rank {0}/8 [[GRAY]]({1})
 Mining.Blast.Other.On=[[GREEN]]\u00a1{0}[[DARK_GREEN]] us\u00f3 [[RED]]Miner\u00eda Explosiva!
 Mining.Blast.Refresh=[[GREEN]]\u00a1Tu habilidad de [[YELLOW]]Miner\u00eda Explosiva [[GREEN]]est\u00e1 refrescada!
-Repair.Effects.0=Reparaci\u00f3n
-Repair.Effects.1=Reparar Herramientas y Armaduras de Hierro
-Repair.Effects.2=Maestr\u00eda de la Reparaci\u00f3n
-Repair.Effects.3=Cantidad de reparaci\u00f3n Incrementada
-Repair.Effects.4=S\u00faper Reparaci\u00f3n
-Repair.Effects.5=Doble Efectividad
-Repair.Effects.6=Reparaci\u00f3n de Diamante ({0}+ SKILL)
-Repair.Effects.7=Reparar Herramientas y Armaduras de Diamante
-Repair.Effects.8=Forjado Arcano
-Repair.Effects.9=Reparar objetos m\u00e1gicos
+Repair.Effect.0=Reparaci\u00f3n
+Repair.Effect.1=Reparar Herramientas y Armaduras de Hierro
+Repair.Effect.2=Maestr\u00eda de la Reparaci\u00f3n
+Repair.Effect.3=Cantidad de reparaci\u00f3n Incrementada
+Repair.Effect.4=S\u00faper Reparaci\u00f3n
+Repair.Effect.5=Doble Efectividad
+Repair.Effect.6=Reparaci\u00f3n de Diamante ({0}+ SKILL)
+Repair.Effect.7=Reparar Herramientas y Armaduras de Diamante
+Repair.Effect.8=Forjado Arcano
+Repair.Effect.9=Reparar objetos m\u00e1gicos
 Repair.Listener.Anvil=[[DARK_RED]]Has colocado un yunque y estos pueden usarse para reparar herramientas y armaduras.
 Repair.Listener=Reparaci\u00f3n:
 Repair.SkillName=REPARACI\u00d3N
