--- a/src/main/resources/locale/locale_fr.properties
+++ b/src/main/resources/locale/locale_fr.properties
@@ -154,16 +154,16 @@ Mining.Blast.Radius.Increase=[[RED]]Rayon d\'explosion : [[YELLOW]]+{0}
 Mining.Blast.Rank=[[RED]]Blast Mining: [[YELLOW]] Rank {0}/8 [[GRAY]]({1})
 Mining.Blast.Other.On=[[GREEN]]{0}[[DARK_GREEN]] a utilis\u00e9 [[RED]]Minage explosif !
 Mining.Blast.Refresh=[[GREEN]]Votre comp\u00e9tence [[YELLOW]]Minage Explosif[[GREEN]] est pr\u00eate !
-Repair.Effects.0=R\u00e9paration
-Repair.Effects.1=R\u00e9pare les outils et armures en fer
-Repair.Effects.2=Ma\u00eetrise du forgeage
-Repair.Effects.3=Am\u00e9liore la r\u00e9paration
-Repair.Effects.4=Superbe r\u00e9paration
-Repair.Effects.5=Double l\'efficacit\u00e9
-Repair.Effects.6=R\u00e9paration du diamant (talent {0}+)
-Repair.Effects.7=R\u00e9pare les outils et armures en diamant
-Repair.Effects.8=Forge arcanique
-Repair.Effects.9=R\u00e9pare les objets magiques
+Repair.Effect.0=R\u00e9paration
+Repair.Effect.1=R\u00e9pare les outils et armures en fer
+Repair.Effect.2=Ma\u00eetrise du forgeage
+Repair.Effect.3=Am\u00e9liore la r\u00e9paration
+Repair.Effect.4=Superbe r\u00e9paration
+Repair.Effect.5=Double l\'efficacit\u00e9
+Repair.Effect.6=R\u00e9paration du diamant (talent {0}+)
+Repair.Effect.7=R\u00e9pare les outils et armures en diamant
+Repair.Effect.8=Forge arcanique
+Repair.Effect.9=R\u00e9pare les objets magiques
 Repair.Listener.Anvil=[[DARK_RED]]Vous venez de poser une enclume, elle peut \u00eatre utilis\u00e9e pour r\u00e9parer votre \u00e9quipement.
 Repair.Listener=R\u00e9paration :
 Repair.SkillName=R\u00c9PARATION
