--- a/src/main/resources/locale/locale_sv.properties
+++ b/src/main/resources/locale/locale_sv.properties
@@ -154,16 +154,16 @@ Mining.Blast.Radius.Increase=[[RED]]Blast Radius Increase: [[YELLOW]]+{0}
 Mining.Blast.Rank=[[RED]]Blast Mining: [[YELLOW]] Rank {0}/8 [[GRAY]]({1})
 Mining.Blast.Other.On=[[GREEN]]{0}[[DARK_GREEN]] has used [[RED]]Blast Mining!
 Mining.Blast.Refresh=[[GREEN]]Din [[YELLOW]]Explosionshacknings [[GREEN]]f\u00f6rm\u00e5ga \u00e4r fulladdad!
-Repair.Effects.0=Repair
-Repair.Effects.1=Repair Iron Tools & Armor
-Repair.Effects.2=Repair Mastery
-Repair.Effects.3=Increased repair amount
-Repair.Effects.4=Super Repair
-Repair.Effects.5=Double effectiveness
-Repair.Effects.6=Diamond Repair ({0}+ SKILL)
-Repair.Effects.7=Repair Diamond Tools & Armor
-Repair.Effects.8=Arcane Forging
-Repair.Effects.9=Repair magic items
+Repair.Effect.0=Repair
+Repair.Effect.1=Repair Iron Tools & Armor
+Repair.Effect.2=Repair Mastery
+Repair.Effect.3=Increased repair amount
+Repair.Effect.4=Super Repair
+Repair.Effect.5=Double effectiveness
+Repair.Effect.6=Diamond Repair ({0}+ SKILL)
+Repair.Effect.7=Repair Diamond Tools & Armor
+Repair.Effect.8=Arcane Forging
+Repair.Effect.9=Repair magic items
 Repair.Listener.Anvil=[[DARK_RED]]You have placed an anvil, anvils can repair tools and armor.
 Repair.Listener=Repair:
 Repair.SkillName=REPAIR
