Minor locale fixes

--- a/src/main/resources/locale/locale_fr.properties
+++ b/src/main/resources/locale/locale_fr.properties
@@ -211,7 +211,7 @@ Swords.Skills.SS.On=[[GREEN]]**ATTAQUE D\u00c9CHIRANTE ACTIV\u00c9E**
 Swords.Skills.SS.Refresh=[[GREEN]]Votre comp\u00e9tence [[YELLOW]]Attaque d\u00e9chirante [[GREEN]]est pr\u00eate !
 Swords.Skills.SS.Other.Off=[[RED]]Attaque d\u00e9chirante[[GREEN]] s\'est termin\u00e9 pour [[YELLOW]]{0}
 Swords.Skills.SS.Other.On=[[GREEN]]{0}[[DARK_GREEN]] a utilis\u00e9 [[RED]]Attaque d\u00e9chirante !
-Swords.SkillUp=[[YELLOW]]Le talent \u00c9p\u00e9es augmente de {0}. Total ({1})
+Swords.Skillup=[[YELLOW]]Le talent \u00c9p\u00e9es augmente de {0}. Total ({1})
 Swords.SS.Length=[[RED]]Dur\u00e9e d\'Attaque d\u00e9chirante : [[YELLOW]]{0}s
 Taming.Ability.Bonus.0=Attentif \u00e0 l\'environnement
 Taming.Ability.Bonus.1=Les loups \u00e9vitent les dangers
