--- a/src/main/resources/locale/locale_ru.properties
+++ b/src/main/resources/locale/locale_ru.properties
@@ -211,7 +211,7 @@ Swords.Skills.SS.On=[[GREEN]]**\u0417\u0410\u0417\u0423\u0411\u0420\u0415\u041d\
 Swords.Skills.SS.Refresh=[[GREEN]]\u0412\u0430\u0448\u0430 \u0441\u043f\u043e\u0441\u043e\u0431\u043d\u043e\u0441\u0442\u044c [[YELLOW]]\u0417\u0430\u0437\u0443\u0431\u0440\u0435\u043d\u043d\u044b\u0439 \u041c\u0435\u0447 [[GREEN]]\u0432\u043e\u0441\u0442\u0430\u043d\u043e\u0432\u043b\u0435\u043d\u0430!
 Swords.Skills.SS.Other.Off=[[RED]]Serrated Strikes[[GREEN]] has worn off for [[YELLOW]]{0}
 Swords.Skills.SS.Other.On=[[GREEN]]{0}[[DARK_GREEN]] \u0438\u0441\u043f\u043e\u043b\u044c\u0437\u043e\u0432\u0430\u043b [[RED]]\u0417\u0430\u0437\u0443\u0431\u0440\u0435\u043d\u043d\u044b\u0439 \u041c\u0435\u0447!
-Swords.SkillUp=[[YELLOW]]Swords skill increased by {0}. Total ({1})
+Swords.Skillup=[[YELLOW]]Swords skill increased by {0}. Total ({1})
 Swords.SS.Length=[[RED]]Serrated Strikes Length: [[YELLOW]]{0}s
 Taming.Ability.Bonus.0=Environmentally Aware
 Taming.Ability.Bonus.1=Wolves avoid danger
