--- a/src/main/resources/locale/locale_es.properties
+++ b/src/main/resources/locale/locale_es.properties
@@ -211,7 +211,7 @@ Swords.Skills.SS.On=[[GREEN]]**ATAQUE DENTADO ACTIVADO**
 Swords.Skills.SS.Refresh=[[GREEN]]\u00a1Tu habilidad de [[YELLOW]]Golpe Dentado [[GREEN]]fue refrescada!
 Swords.Skills.SS.Other.Off=[[RED]]Ataque Dentado[[GREEN]] le ha expirado a [[YELLOW]]{0}
 Swords.Skills.SS.Other.On=[[GREEN]]\u00a1{0}[[DARK_GREEN]] us\u00f3 [[RED]]Ataque Dentado!
-Swords.SkillUp=[[YELLOW]]Habilidad de Espadas incrementada en {0}. Total ({1})
+Swords.Skillup=[[YELLOW]]Habilidad de Espadas incrementada en {0}. Total ({1})
 Swords.SS.Length=[[RED]]Duraci\u00f3n del Ataque Dentado: [[YELLOW]]{0}s
 Taming.Ability.Bonus.0=Consciente del Entorno
 Taming.Ability.Bonus.1=Lobos evitan peligros
