--- a/Changelog.txt
+++ b/Changelog.txt
@@ -19,14 +19,12 @@ Version 1.3.06-dev
  = Fixed bug where {0} would be displayed in front of your power level in mcstats
  = Fixed mmoupdate not being useable from console
  = Fixed bug with repairing wooden tools
- = Fixed bug with repairing wooden tools
  = Fixed bug with Nether Wart not awarding XP
  = Fixed bug with fishing treasures when treasures list is empty
  = Fixed bug with only getting one level when there was enough XP for multiple levels.
  = Fixed bugs with the way /mctop displayed
  = Fixed issues with custom characters & locale files.
  ! Changed how we handled the config file to prevent any bugs when returning values
- ! Changed default locale name to en-US rather than en_us for the sake of compliance
  ! Changed locale files to use a new naming scheme. This breaks ALL old locale files. If you want to assist with re-translating anything, go to getlocalization.com/mcMMO
  ! Changed mcremove to check for users in the MySQL DB before sending queries to remove them
  ! Changed how the tree feller threshold worked for the better
@@ -41,6 +39,7 @@ Version 1.3.06-dev
  ! Changed /mcrefresh to work for offline players
  ! Changed UpdateXPBar function to hopefully avoid errors
  ! Changed /party to show offline party members
+ ! Changed Blast Mining requirements, now asks for the player to be crouching
 
 Version 1.3.05
  + Added Skill Shot to Archery which increases damage dealt by 10% every 50 skill levels (caps at 200%)
