--- a/Changelog.txt
+++ b/Changelog.txt
@@ -24,6 +24,7 @@ Version 1.3.06-dev
  = Fixed bug with only getting one level when there was enough XP for multiple levels.
  = Fixed bugs with the way /mctop displayed
  = Fixed issues with custom characters & locale files.
+ = Fixed double explosion for Blast Mining
  ! Changed how we handled the config file to prevent any bugs when returning values
  ! Changed locale files to use a new naming scheme. This breaks ALL old locale files. If you want to assist with re-translating anything, go to getlocalization.com/mcMMO
  ! Changed mcremove to check for users in the MySQL DB before sending queries to remove them
