Fixed Blast Mining not giving triple drop when it should

--- a/Changelog.txt
+++ b/Changelog.txt
@@ -25,6 +25,7 @@ Version 1.3.06-dev
  = Fixed bugs with the way /mctop displayed
  = Fixed issues with custom characters & locale files.
  = Fixed double explosion for Blast Mining
+ = Fixed Blast Mining not giving triple drops when it should
  ! Changed how we handled the config file to prevent any bugs when returning values
  ! Changed locale files to use a new naming scheme. This breaks ALL old locale files. If you want to assist with re-translating anything, go to getlocalization.com/mcMMO
  ! Changed mcremove to check for users in the MySQL DB before sending queries to remove them
