--- a/src/main/resources/locale/locale_es.properties
+++ b/src/main/resources/locale/locale_es.properties
@@ -359,7 +359,7 @@ mcMMO.MOTD=[[BLUE]]This server is running mcMMO {0}! \n Type [[YELLOW]]/mcmmo[[B
 mcMMO.NoInvites=[[RED]]No tienes invitaciones en este momento
 mcMMO.NoPermission=[[DARK_RED]]Permisos insuficientes.
 mcMMO.NoSkillNote=[[DARK_GRAY]]Si no tienes acceso a una habilidad no ser\u00e1 mostrada aqu\u00ed.
-mcMMO.Wiki=[[GREEN]]http://mcmmo.wikia.com[[BLUE]] - Wiki de mcMMO
+mcMMO.Wiki=[[GREEN]]http://www.mcmmo.org/wiki/[[BLUE]] - Wiki de mcMMO
 Commands.Party.InParty=[[GREEN]]Grupo: {0}
 Party.Forbidden=[mcMMO] No se permiten grupos en este mundo (Ver permisos)
 Party.Help.0=[[RED]]Proper usage is /party <party-name> to join or /party q to quit
