--- a/src/main/resources/locale/locale_fr.properties
+++ b/src/main/resources/locale/locale_fr.properties
@@ -359,7 +359,7 @@ mcMMO.MOTD=[[BLUE]]Ce serveur utilise mcMMO {0} !\nTapez [[YELLOW]]/mcmmo[[BLUE]
 mcMMO.NoInvites=[[RED]]Vous n\'avez pas \u00e9t\u00e9 invit\u00e9
 mcMMO.NoPermission=[[DARK_RED]]Vous n\'avez pas les droits.
 mcMMO.NoSkillNote=[[DARK_GRAY]]Si vous n\'avez pas les droits pour un talent, il n\'appara\u00eetra pas ici.
-mcMMO.Wiki=[[GREEN]]http://mcmmo.wikia.com[[BLUE]] - Wiki mcMMO
+mcMMO.Wiki=[[GREEN]]http://www.mcmmo.org/wiki/[[BLUE]] - Wiki mcMMO
 Commands.Party.InParty=[[GREEN]]Joueurs dans le groupe : {0}
 Party.Forbidden=[mcMMO] Les groupes ne sont pas permis dans ce monde (voir les permissions)
 Party.Help.0=[[RED]]L\'usage correct est /party <nom> pour rejoindre, et /party q pour quitter
