--- a/src/main/resources/locale/locale_pt_BR.properties
+++ b/src/main/resources/locale/locale_pt_BR.properties
@@ -359,7 +359,7 @@ mcMMO.MOTD=[[BLUE]]This server is running mcMMO {0}! \n Type [[YELLOW]]/mcmmo[[B
 mcMMO.NoInvites=[[RED]]You have no invites at this time
 mcMMO.NoPermission=[[DARK_RED]]Insufficient permissions.
 mcMMO.NoSkillNote=[[DARK_GRAY]]If you don\'t have access to a skill it will not be shown here.
-mcMMO.Wiki=[[GREEN]]http://mcmmo.wikia.com[[BLUE]] - mcMMO Wiki
+mcMMO.Wiki=[[GREEN]]http://www.mcmmo.org/wiki/[[BLUE]] - mcMMO Wiki
 Commands.Party.InParty=[[GREEN]]Party: {0}
 Party.Forbidden=[mcMMO] Parties not permitted on this world (See Permissions)
 Party.Help.0=[[RED]]Proper usage is /party <party-name> to join or /party q to quit
