--- a/Changelog.txt
+++ b/Changelog.txt
@@ -14,6 +14,7 @@ Version 1.3.06
  + Added API functions for admin & party chat
  + Added Iron Grip skill to Unarmed which gives players an chance to keep from being disarmed.
  + Added some new languages to the locale files.
+ = Fixed Green Thumb consuming 2 seeds instead of 1
  = Fixed exploit where you could teleport to yourself with PTP to prevent things like fall damage
  = Fixed NPE error with Metrics on startup
  = Fixed bug where Herbalism required double drops permission to give XP
