--- a/Changelog.txt
+++ b/Changelog.txt
@@ -7,6 +7,9 @@ Key:
   ! Change
   - Removal
 
+Version 1.3.07
+ ! Changed MySQL to save player information 50ms apart from each other to reduce the load on the MySQL server
+
 Version 1.3.06
  + Added Iron Golem XP for aggressive golems
  + Added permissions check to skill functions
