--- a/Changelog.txt
+++ b/Changelog.txt
@@ -8,7 +8,9 @@ Key:
   - Removal
 
 Version 1.3.07
+ + Added a permission node for Archery bonus damage
  ! Changed MySQL to save player information 50ms apart from each other to reduce the load on the MySQL server
+ - Removed some unused permission nodes
 
 Version 1.3.06
  + Added Iron Golem XP for aggressive golems
