Locale file update.

--- a/src/main/resources/locale/locale_de.properties
+++ b/src/main/resources/locale/locale_de.properties
@@ -1,6 +1,6 @@
 Acrobatics.Ability.Proc=[[GREEN]]**Graceful Landing**
 Acrobatics.Combat.Proc=[[GREEN]]**Ausgewichen**
-Acrobatics.DodgeChance=[[RED]]Dodge Chance: [[YELLOW]]{0}%
+Acrobatics.DodgeChance=[[RED]]Dodge Chance: [[YELLOW]]{0}
 Acrobatics.Effect.0=Roll
 Acrobatics.Effect.1=Reduces or Negates fall damage
 Acrobatics.Effect.2=Graceful Roll
@@ -8,14 +8,14 @@ Acrobatics.Effect.3=Twice as effective as a normal Roll
 Acrobatics.Effect.4=Dodge
 Acrobatics.Effect.5=Reduce attack damage by half
 Acrobatics.Listener=Akrobatik:
-Acrobatics.Roll.Chance=[[RED]]Roll Chance: [[YELLOW]]{0}%
-Acrobatics.Roll.GraceChance=[[RED]]Graceful Roll Chance: [[YELLOW]]{0}%
+Acrobatics.Roll.Chance=[[RED]]Roll Chance: [[YELLOW]]{0}
+Acrobatics.Roll.GraceChance=[[RED]]Graceful Roll Chance: [[YELLOW]]{0}
 Acrobatics.Roll.Text=**Rolled**
 Acrobatics.SkillName=AKROBATIK
 Acrobatics.Skillup=[[YELLOW]]Acrobatik Fertigkeit ist um {0} gestiegen. Gesamt ({1})
-Archery.Combat.DazeChance=[[RED]]Chance to Daze: [[YELLOW]]{0}%
-Archery.Combat.RetrieveChance=[[RED]]Chance Pfeile wiederzuerlangen: [[YELLOW]]{0}%
-Archery.Combat.SkillshotBonus=[[RED]]Skill Shot Bonus Damage: [[YELLOW]]{0}%
+Archery.Combat.DazeChance=[[RED]]Chance to Daze: [[YELLOW]]{0}
+Archery.Combat.RetrieveChance=[[RED]]Chance to Retrieve Arrows: [[YELLOW]]{0}
+Archery.Combat.SkillshotBonus=[[RED]]Skill Shot Bonus Damage: [[YELLOW]]{0}
 Archery.Effect.0=Skill Shot
 Archery.Effect.1=Erh\u00f6ht Schaden von B\u00f6gen
 Archery.Effect.2=Daze (Players)
@@ -207,11 +207,10 @@ Swords.Effect.7=Apply a bleed DoT
 Swords.Listener=Schwerter:
 Swords.SkillName=SCHWERTER
 Swords.Skills.SS.Off=[[RED]]**Serrated Strikes has worn off**
-Swords.Skills.SS.On=[[GREEN]]**SERRATED STRIKES ACTIVATED**
+Swords.Skills.SS.On=[[GREEN]]**GEZAHNTE TREFFER AKTIVIERT**
 Swords.Skills.SS.Refresh=[[GREEN]]Your [[YELLOW]]Serrated Strikes [[GREEN]]ability is refreshed!
 Swords.Skills.SS.Other.Off=[[RED]]Serrated Strikes[[GREEN]] has worn off for [[YELLOW]]{0}
 Swords.Skills.SS.Other.On=[[GREEN]]{0}[[DARK_GREEN]] has used [[RED]]Serrated Strikes!
-Swords.Skillup=[[YELLOW]]Swords skill increased by {0}. Total ({1})
 Swords.SS.Length=[[RED]]Serrated Strikes Length: [[YELLOW]]{0}s
 Taming.Ability.Bonus.0=Umweltbewusst
 Taming.Ability.Bonus.1=W\u00f6lfe vermeiden Gefahr
@@ -311,7 +310,7 @@ Combat.Ignition=[[RED]]**ENTZUENDEN**
 Combat.StruckByGore=[[RED]]**Getroffen von Biss**
 Combat.TargetDazed=Target was [[DARK_RED]]benommen
 Combat.TouchedFuzzy=[[DARK_RED]]Benommen. fuehlt sich schwindelig.
-mcMMO.Description=[[DARK_AQUA]]About the [[YELLOW]]mcMMO[[DARK_AQUA]] Project:,[[GOLD]]mcMMO is an [[RED]]open source[[GOLD]] RPG mod created in February 2011,[[GOLD]]by [[BLUE]]nossr50[[GOLD]]. The goal is to provide a quality RPG experience.,[[DARK_AQUA]]Tips:,[[GOLD]] - [[GREEN]]Use [[RED]]/mcc[[GREEN]] to see commands,[[GOLD]] - [[GREEN]]Type [[RED]]/SKILLNAME[[GREEN]] to see detailed skill info,[[DARK_AQUA]]Developers:,[[GOLD]] - [[GREEN]]nossr50 [[BLUE]](Project Lead),[[GOLD]] - [[GREEN]]GJ [[BLUE]](Senior Developer),[[GOLD]] - [[GREEN]]NuclearW [[BLUE]](Developer),,[[GOLD]] - [[GREEN]]bm01 [[BLUE]](Developer),[[DARK_AQUA]]Useful Links:,[[GOLD]] - [[GREEN]]issues.mcmmo.org[[GOLD]] Bug Reporting,[[GOLD]] - [[GREEN]]#mcmmo @ irc.esper.net[[GOLD]] IRC Chat,[[GOLD]] - [[GREEN]]http://bit.ly/H6XwFb[[GOLD]] Bukkit Forum Thread
+mcMMO.Description=[[DARK_AQUA]]About the [[YELLOW]]mcMMO[[DARK_AQUA]] Project:,[[GOLD]]mcMMO is an [[RED]]open source[[GOLD]] RPG mod created in February 2011,[[GOLD]]by [[BLUE]]nossr50[[GOLD]]. The goal is to provide a quality RPG experience.,[[DARK_AQUA]]Tips:,[[GOLD]] - [[GREEN]]Use [[RED]]/mcc[[GREEN]] to see commands,[[GOLD]] - [[GREEN]]Type [[RED]]/SKILLNAME[[GREEN]] to see detailed skill info,[[DARK_AQUA]]Developers:,[[GOLD]] - [[GREEN]]nossr50 [[BLUE]](Project Lead),[[GOLD]] - [[GREEN]]GJ [[BLUE]](Senior Developer),[[GOLD]] - [[GREEN]]NuclearW [[BLUE]](Developer),[[GOLD]] - [[GREEN]]bm01 [[BLUE]](Developer),[[DARK_AQUA]]Useful Links:,[[GOLD]] - [[GREEN]]issues.mcmmo.org[[GOLD]] Bug Reporting,[[GOLD]] - [[GREEN]]#mcmmo @ irc.esper.net[[GOLD]] IRC Chat,[[GOLD]] - [[GREEN]]http://bit.ly/H6XwFb[[GOLD]] Bukkit Forum Thread
 Commands.Ability.Off=Ability use toggled [[RED]]off
 Commands.Ability.On=Ability use toggled [[GREEN]]on
 Commands.AdminChat.Off=Admin Chat [[RED]]deaktiviert
@@ -339,7 +338,7 @@ Commands.Party.Invite.0=[[RED]]ALERT: [[GREEN]]You have received a party invite 
 Commands.Party.Invite.1=[[YELLOW]]Type [[GREEN]]/accept[[YELLOW]] to accept the invite
 Commands.Party.Invite=<player> [[RED]]- Send party invite
 Commands.Party.Join=Gruppe beigetreten: {0}
-Commands.Party.Kick=[[RED]]You were kicked from party {0}!
+Commands.Party.Kick=Du wurdest aus der Party rausgeworfen {0}!
 Commands.Party.Leave=[[RED]]Du hast die Gruppe verlassen
 Commands.Party.Members=[[GREEN]]Party Members: {0}
 Commands.Party.None=[[RED]]Du bist nicht in einer Gruppe.
@@ -368,7 +367,7 @@ Party.Help.2=[[RED]]Consult /party ? for more information
 Party.Help.3=[[RED]]Use /party <party-name> to join or /party q to quit
 Party.Help.4=[[RED]]To lock or unlock your party, use /party <lock/unlock>
 Party.Help.5=[[RED]]To password protect your party, use /party password <password>
-Party.Help.6=[[RED]]To kick a player from your party, use /party kick <player>
+Party.Help.6=[[RED]]Um einen Spieler aus deiner Party rauszuwerfen, verwende /party kick <player>
 Party.Help.7=[[RED]]To transfer ownership of your party, use /party owner <player>
 Party.InformedOnJoin={0} [[YELLOW]] ist deiner Gruppe beigetreten
 Party.InformedOnQuit={0} [[YELLOW]] hat deine Gruppe verlassen
