--- a/src/main/resources/locale/locale_es.properties
+++ b/src/main/resources/locale/locale_es.properties
@@ -1,6 +1,6 @@
 Acrobatics.Ability.Proc=[[GREEN]]**Aterrizaje Agraciado**
 Acrobatics.Combat.Proc=[[GREEN]]**Esquivado**
-Acrobatics.DodgeChance=[[RED]]Probabilidad de Esquivar: [[YELLOW]]{0}%
+Acrobatics.DodgeChance=[[RED]]Dodge Chance: [[YELLOW]]{0}
 Acrobatics.Effect.0=Rodada
 Acrobatics.Effect.1=Reduce o Elimina el da\u00f1o de caida
 Acrobatics.Effect.2=Rodada Majestuosa
@@ -8,14 +8,14 @@ Acrobatics.Effect.3=El doble de efectivo que una rodada normal
 Acrobatics.Effect.4=Esquivar
 Acrobatics.Effect.5=Reduce el da\u00f1o de ataque a la mitad
 Acrobatics.Listener=Acrobacias:
-Acrobatics.Roll.Chance=[[RED]]Probabilidad de Rodar: [[YELLOW]]{0}%
-Acrobatics.Roll.GraceChance=[[RED]]Probabilidad de Rodada Majestuosa: [[YELLOW]]{0}%
+Acrobatics.Roll.Chance=[[RED]]Roll Chance: [[YELLOW]]{0}
+Acrobatics.Roll.GraceChance=[[RED]]Graceful Roll Chance: [[YELLOW]]{0}
 Acrobatics.Roll.Text=**Rodado**
 Acrobatics.SkillName=ACROBACIAS
 Acrobatics.Skillup=[[YELLOW]]Habilidad de Acrobacias incrementada en {0}. Total ({1})
-Archery.Combat.DazeChance=[[RED]]Probabilidad de Aturdimiento: [[YELLOW]]{0}%
-Archery.Combat.RetrieveChance=[[RED]]Probabilidad de Recuperar Flechas: [[YELLOW]]{0}%
-Archery.Combat.SkillshotBonus=[[RED]]Da\u00f1o Bonus por Tiro: [[YELLOW]]{0}%
+Archery.Combat.DazeChance=[[RED]]Chance to Daze: [[YELLOW]]{0}
+Archery.Combat.RetrieveChance=[[RED]]Chance to Retrieve Arrows: [[YELLOW]]{0}
+Archery.Combat.SkillshotBonus=[[RED]]Skill Shot Bonus Damage: [[YELLOW]]{0}
 Archery.Effect.0=Habilidad de Tiro
 Archery.Effect.1=Incrementar da\u00f1o hecho con arcos
 Archery.Effect.2=Aturdir (Jugadores)
@@ -211,7 +211,6 @@ Swords.Skills.SS.On=[[GREEN]]**ATAQUE DENTADO ACTIVADO**
 Swords.Skills.SS.Refresh=[[GREEN]]\u00a1Tu habilidad de [[YELLOW]]Golpe Dentado [[GREEN]]fue refrescada!
 Swords.Skills.SS.Other.Off=[[RED]]Ataque Dentado[[GREEN]] le ha expirado a [[YELLOW]]{0}
 Swords.Skills.SS.Other.On=[[GREEN]]\u00a1{0}[[DARK_GREEN]] us\u00f3 [[RED]]Ataque Dentado!
-Swords.Skillup=[[YELLOW]]Habilidad de Espadas incrementada en {0}. Total ({1})
 Swords.SS.Length=[[RED]]Duraci\u00f3n del Ataque Dentado: [[YELLOW]]{0}s
 Taming.Ability.Bonus.0=Consciente del Entorno
 Taming.Ability.Bonus.1=Lobos evitan peligros
@@ -311,7 +310,7 @@ Combat.Ignition=[[RED]]**IGNICION**
 Combat.StruckByGore=[[RED]]**FUISTE MORDISQUEADO**
 Combat.TargetDazed=El objetivo fue [[DARK_RED]]aturdido
 Combat.TouchedFuzzy=[[DARK_RED]]Est\u00e1s confuso. Te sientes mareado.
-mcMMO.Description=[[DARK_AQUA]]About the [[YELLOW]]mcMMO[[DARK_AQUA]] Project:,[[GOLD]]mcMMO is an [[RED]]open source[[GOLD]] RPG mod created in February 2011,[[GOLD]]by [[BLUE]]nossr50[[GOLD]]. The goal is to provide a quality RPG experience.,[[DARK_AQUA]]Tips:,[[GOLD]] - [[GREEN]]Use [[RED]]/mcc[[GREEN]] to see commands,[[GOLD]] - [[GREEN]]Type [[RED]]/SKILLNAME[[GREEN]] to see detailed skill info,[[DARK_AQUA]]Developers:,[[GOLD]] - [[GREEN]]nossr50 [[BLUE]](Project Lead),[[GOLD]] - [[GREEN]]GJ [[BLUE]](Senior Developer),[[GOLD]] - [[GREEN]]NuclearW [[BLUE]](Developer),,[[GOLD]] - [[GREEN]]bm01 [[BLUE]](Developer),[[DARK_AQUA]]Useful Links:,[[GOLD]] - [[GREEN]]issues.mcmmo.org[[GOLD]] Bug Reporting,[[GOLD]] - [[GREEN]]#mcmmo @ irc.esper.net[[GOLD]] IRC Chat,[[GOLD]] - [[GREEN]]http://bit.ly/H6XwFb[[GOLD]] Bukkit Forum Thread
+mcMMO.Description=[[DARK_AQUA]]About the [[YELLOW]]mcMMO[[DARK_AQUA]] Project:,[[GOLD]]mcMMO is an [[RED]]open source[[GOLD]] RPG mod created in February 2011,[[GOLD]]by [[BLUE]]nossr50[[GOLD]]. The goal is to provide a quality RPG experience.,[[DARK_AQUA]]Tips:,[[GOLD]] - [[GREEN]]Use [[RED]]/mcc[[GREEN]] to see commands,[[GOLD]] - [[GREEN]]Type [[RED]]/SKILLNAME[[GREEN]] to see detailed skill info,[[DARK_AQUA]]Developers:,[[GOLD]] - [[GREEN]]nossr50 [[BLUE]](Project Lead),[[GOLD]] - [[GREEN]]GJ [[BLUE]](Senior Developer),[[GOLD]] - [[GREEN]]NuclearW [[BLUE]](Developer),[[GOLD]] - [[GREEN]]bm01 [[BLUE]](Developer),[[DARK_AQUA]]Useful Links:,[[GOLD]] - [[GREEN]]issues.mcmmo.org[[GOLD]] Bug Reporting,[[GOLD]] - [[GREEN]]#mcmmo @ irc.esper.net[[GOLD]] IRC Chat,[[GOLD]] - [[GREEN]]http://bit.ly/H6XwFb[[GOLD]] Bukkit Forum Thread
 Commands.Ability.Off=Habilidades [[RED]]desactivadas
 Commands.Ability.On=Habilidades [[GREEN]]activadas
 Commands.AdminChat.Off=Chat s\u00f3lo para Admins [[RED]]desactivado
@@ -359,7 +358,7 @@ mcMMO.MOTD=[[BLUE]]This server is running mcMMO {0}! \n Type [[YELLOW]]/mcmmo[[B
 mcMMO.NoInvites=[[RED]]No tienes invitaciones en este momento
 mcMMO.NoPermission=[[DARK_RED]]Permisos insuficientes.
 mcMMO.NoSkillNote=[[DARK_GRAY]]Si no tienes acceso a una habilidad no ser\u00e1 mostrada aqu\u00ed.
-mcMMO.Wiki=[[GREEN]]http://www.mcmmo.org/wiki/[[BLUE]] - Wiki de mcMMO
+mcMMO.Wiki=[[GREEN]]http://www.mcmmo.org/wiki/[[BLUE]] - mcMMO Wiki
 Commands.Party.InParty=[[GREEN]]Grupo: {0}
 Party.Forbidden=[mcMMO] No se permiten grupos en este mundo (Ver permisos)
 Party.Help.0=[[RED]]Proper usage is /party <party-name> to join or /party q to quit
