--- a/src/main/resources/locale/locale_ru.properties
+++ b/src/main/resources/locale/locale_ru.properties
@@ -1,6 +1,6 @@
 Acrobatics.Ability.Proc=[[GREEN]]**Graceful Landing**
 Acrobatics.Combat.Proc=[[GREEN]]**\u0423\u043a\u043b\u043e\u043d\u0435\u043d\u0438\u0435**
-Acrobatics.DodgeChance=[[RED]]\u0428\u0430\u043d\u0441 \u0423\u043a\u043b\u043e\u043d\u0435\u043d\u0438\u044f: [[YELLOW]]{0}%
+Acrobatics.DodgeChance=[[RED]]Dodge Chance: [[YELLOW]]{0}
 Acrobatics.Effect.0=Roll
 Acrobatics.Effect.1=Reduces or Negates fall damage
 Acrobatics.Effect.2=Graceful Roll
@@ -8,14 +8,14 @@ Acrobatics.Effect.3=Twice as effective as a normal Roll
 Acrobatics.Effect.4=Dodge
 Acrobatics.Effect.5=Reduce attack damage by half
 Acrobatics.Listener=\u0410\u043a\u0440\u043e\u0431\u0430\u0442\u0438\u043a\u0430:
-Acrobatics.Roll.Chance=[[RED]]Roll Chance: [[YELLOW]]{0}%
-Acrobatics.Roll.GraceChance=[[RED]]Graceful Roll Chance: [[YELLOW]]{0}%
+Acrobatics.Roll.Chance=[[RED]]Roll Chance: [[YELLOW]]{0}
+Acrobatics.Roll.GraceChance=[[RED]]Graceful Roll Chance: [[YELLOW]]{0}
 Acrobatics.Roll.Text=**Rolled**
 Acrobatics.SkillName=\u0410\u041a\u0420\u041e\u0411\u0410\u0422\u0418\u041a\u0410
 Acrobatics.Skillup=[[YELLOW]]\u041d\u0430\u0432\u044b\u043a \u0410\u043a\u0440\u043e\u0431\u0430\u0442\u0438\u043a\u0438 \u0443\u0432\u0435\u043b\u0438\u0447\u0435\u043d \u043d\u0430 {0}. \u0412\u0441\u0435\u0433\u043e ({1})
-Archery.Combat.DazeChance=[[RED]]Chance to Daze: [[YELLOW]]{0}%
-Archery.Combat.RetrieveChance=[[RED]]\u0428\u0430\u043d\u0441 \u0438\u0437\u0432\u043b\u0435\u0447\u044c \u0441\u0442\u0440\u0435\u043b\u044b: [[YELLOW]]{0}%
-Archery.Combat.SkillshotBonus=[[RED]]\u0414\u043e\u043f\u043e\u043b\u043d\u0438\u0442\u0435\u043b\u044c\u043d\u044b\u0439 \u0443\u0440\u043e\u043d \u043e\u0442 \u0423\u043c\u0435\u043b\u043e\u0433\u043e \u0412\u044b\u0441\u0442\u0440\u0435\u043b\u0430: [[YELLOW]]{0}%
+Archery.Combat.DazeChance=[[RED]]Chance to Daze: [[YELLOW]]{0}
+Archery.Combat.RetrieveChance=[[RED]]Chance to Retrieve Arrows: [[YELLOW]]{0}
+Archery.Combat.SkillshotBonus=[[RED]]Skill Shot Bonus Damage: [[YELLOW]]{0}
 Archery.Effect.0=\u0423\u043c\u0435\u043b\u044b\u0439 \u0412\u044b\u0441\u0442\u0440\u0435\u043b
 Archery.Effect.1=\u0423\u0432\u0435\u043b\u0438\u0447\u0438\u0432\u0430\u0435\u0442 \u0443\u0440\u043e\u043d \u043d\u0430\u043d\u043e\u0441\u0438\u043c\u044b\u0439 \u043b\u0443\u043a\u043e\u043c
 Archery.Effect.2=\u0428\u043e\u043a\u0438\u0440\u043e\u0432\u0430\u043d\u0438\u0435(\u0418\u0433\u0440\u043e\u043a\u043e\u0432)
@@ -211,7 +211,6 @@ Swords.Skills.SS.On=[[GREEN]]**\u0417\u0410\u0417\u0423\u0411\u0420\u0415\u041d\
 Swords.Skills.SS.Refresh=[[GREEN]]\u0412\u0430\u0448\u0430 \u0441\u043f\u043e\u0441\u043e\u0431\u043d\u043e\u0441\u0442\u044c [[YELLOW]]\u0417\u0430\u0437\u0443\u0431\u0440\u0435\u043d\u043d\u044b\u0439 \u041c\u0435\u0447 [[GREEN]]\u0432\u043e\u0441\u0442\u0430\u043d\u043e\u0432\u043b\u0435\u043d\u0430!
 Swords.Skills.SS.Other.Off=[[RED]]Serrated Strikes[[GREEN]] has worn off for [[YELLOW]]{0}
 Swords.Skills.SS.Other.On=[[GREEN]]{0}[[DARK_GREEN]] \u0438\u0441\u043f\u043e\u043b\u044c\u0437\u043e\u0432\u0430\u043b [[RED]]\u0417\u0430\u0437\u0443\u0431\u0440\u0435\u043d\u043d\u044b\u0439 \u041c\u0435\u0447!
-Swords.Skillup=[[YELLOW]]Swords skill increased by {0}. Total ({1})
 Swords.SS.Length=[[RED]]Serrated Strikes Length: [[YELLOW]]{0}s
 Taming.Ability.Bonus.0=Environmentally Aware
 Taming.Ability.Bonus.1=Wolves avoid danger
@@ -311,7 +310,7 @@ Combat.Ignition=[[RED]]**\u00c2\u00fb \u00ef\u00ee\u00e4\u00ee\u00e6\u00e3\u00eb
 Combat.StruckByGore=[[RED]]**\u00ce\u00ea\u00f0\u00e0\u00e2\u00eb\u00e5\u00ed\u00e8\u00e5 \u00ed\u00e5\u00f3\u00e4\u00e0\u00f7\u00ed\u00ee**
 Combat.TargetDazed=\u00c2\u00e0\u00f8\u00e0 \u00f6\u00e5\u00eb\u00fc [[DARK_RED]]\u00d8\u00ee\u00ea\u00e8\u00f0\u00ee\u00e2\u00e0\u00ed\u00e0
 Combat.TouchedFuzzy=[[DARK_RED]]\u00c2\u00fb \u00e8\u00f1\u00f2\u00e5\u00ea\u00e0\u00e5\u00f2\u00e5 \u00ea\u00f0\u00ee\u00e2\u00fc\u00fe. \u00ca\u00f0\u00f3\u00e6\u00e8\u00f2\u00f1\u00ff \u00e3\u00ee\u00eb\u00ee\u00e2\u00e0.
-mcMMO.Description=[[DARK_AQUA]]About the [[YELLOW]]mcMMO[[DARK_AQUA]] Project:,[[GOLD]]mcMMO is an [[RED]]open source[[GOLD]] RPG mod created in February 2011,[[GOLD]]by [[BLUE]]nossr50[[GOLD]]. The goal is to provide a quality RPG experience.,[[DARK_AQUA]]Tips:,[[GOLD]] - [[GREEN]]Use [[RED]]/mcc[[GREEN]] to see commands,[[GOLD]] - [[GREEN]]Type [[RED]]/SKILLNAME[[GREEN]] to see detailed skill info,[[DARK_AQUA]]Developers:,[[GOLD]] - [[GREEN]]nossr50 [[BLUE]](Project Lead),[[GOLD]] - [[GREEN]]GJ [[BLUE]](Senior Developer),[[GOLD]] - [[GREEN]]NuclearW [[BLUE]](Developer),,[[GOLD]] - [[GREEN]]bm01 [[BLUE]](Developer),[[DARK_AQUA]]Useful Links:,[[GOLD]] - [[GREEN]]issues.mcmmo.org[[GOLD]] Bug Reporting,[[GOLD]] - [[GREEN]]#mcmmo @ irc.esper.net[[GOLD]] IRC Chat,[[GOLD]] - [[GREEN]]http://bit.ly/H6XwFb[[GOLD]] Bukkit Forum Thread
+mcMMO.Description=[[DARK_AQUA]]About the [[YELLOW]]mcMMO[[DARK_AQUA]] Project:,[[GOLD]]mcMMO is an [[RED]]open source[[GOLD]] RPG mod created in February 2011,[[GOLD]]by [[BLUE]]nossr50[[GOLD]]. The goal is to provide a quality RPG experience.,[[DARK_AQUA]]Tips:,[[GOLD]] - [[GREEN]]Use [[RED]]/mcc[[GREEN]] to see commands,[[GOLD]] - [[GREEN]]Type [[RED]]/SKILLNAME[[GREEN]] to see detailed skill info,[[DARK_AQUA]]Developers:,[[GOLD]] - [[GREEN]]nossr50 [[BLUE]](Project Lead),[[GOLD]] - [[GREEN]]GJ [[BLUE]](Senior Developer),[[GOLD]] - [[GREEN]]NuclearW [[BLUE]](Developer),[[GOLD]] - [[GREEN]]bm01 [[BLUE]](Developer),[[DARK_AQUA]]Useful Links:,[[GOLD]] - [[GREEN]]issues.mcmmo.org[[GOLD]] Bug Reporting,[[GOLD]] - [[GREEN]]#mcmmo @ irc.esper.net[[GOLD]] IRC Chat,[[GOLD]] - [[GREEN]]http://bit.ly/H6XwFb[[GOLD]] Bukkit Forum Thread
 Commands.Ability.Off=Ability use toggled [[RED]]off
 Commands.Ability.On=Ability use toggled [[GREEN]]on
 Commands.AdminChat.Off=\u0410\u0434\u043c\u0438\u043d \u0427\u0430\u0442 [[RED]]\u043e\u0442\u043a\u043b\u044e\u0447\u0435\u043d
