--- a/src/main/resources/locale/locale_fr.properties
+++ b/src/main/resources/locale/locale_fr.properties
@@ -1,6 +1,6 @@
 Acrobatics.Ability.Proc=[[GREEN]]**Atterrissage gracieux**
 Acrobatics.Combat.Proc=[[GREEN]]**Esquiv\u00e9**
-Acrobatics.DodgeChance=[[RED]]Chance d\'esquive : [[YELLOW]]{0}%
+Acrobatics.DodgeChance=[[RED]]Dodge Chance: [[YELLOW]]{0}
 Acrobatics.Effect.0=Roulade
 Acrobatics.Effect.1=R\u00e9duit ou annule les d\u00e9g\u00e2ts de chute
 Acrobatics.Effect.2=Roulade gracieuse
@@ -8,14 +8,14 @@ Acrobatics.Effect.3=Deux fois plus efficace qu\'une roulade classique
 Acrobatics.Effect.4=Esquive
 Acrobatics.Effect.5=R\u00e9duit de moiti\u00e9 les d\u00e9g\u00e2ts re\u00e7us
 Acrobatics.Listener=Acrobatie :
-Acrobatics.Roll.Chance=[[RED]]Chance de roulade : [[YELLOW]]{0}%
-Acrobatics.Roll.GraceChance=[[RED]]Chance de roulade gracieuse : [[YELLOW]]{0}%
+Acrobatics.Roll.Chance=[[RED]]Roll Chance: [[YELLOW]]{0}
+Acrobatics.Roll.GraceChance=[[RED]]Graceful Roll Chance: [[YELLOW]]{0}
 Acrobatics.Roll.Text=**ROULADE**
 Acrobatics.SkillName=ACROBATIE
 Acrobatics.Skillup=[[YELLOW]]Le talent Acrobatie augmente de {0}. Total ({1})
-Archery.Combat.DazeChance=[[RED]]Chance de d\u00e9sorienter : [[YELLOW]]{0}%
-Archery.Combat.RetrieveChance=[[RED]]Chance de r\u00e9cup\u00e9ration de fl\u00e8che : [[YELLOW]]{0}%
-Archery.Combat.SkillshotBonus=[[RED]]Tir pr\u00e9cis, bonus de d\u00e9g\u00e2ts : [[YELLOW]]{0}%
+Archery.Combat.DazeChance=[[RED]]Chance to Daze: [[YELLOW]]{0}
+Archery.Combat.RetrieveChance=[[RED]]Chance to Retrieve Arrows: [[YELLOW]]{0}
+Archery.Combat.SkillshotBonus=[[RED]]Skill Shot Bonus Damage: [[YELLOW]]{0}
 Archery.Effect.0=Tir pr\u00e9cis
 Archery.Effect.1=Augmente les d\u00e9g\u00e2ts inflig\u00e9s
 Archery.Effect.2=[[RED]]Chance de d\u00e9sorienter : [[YELLOW]]{0}%
@@ -115,7 +115,7 @@ Herbalism.Skills.GTe.Refresh=[[GREEN]]Votre comp\u00e9tence [[YELLOW]]Main verte
 Herbalism.Skills.GTe.Other.Off=[[RED]]Main verte[[GREEN]] est termin\u00e9 pour [[YELLOW]]{0}
 Herbalism.Skills.GTe.Other.On=[[GREEN]]{0}[[DARK_GREEN]] a utilis\u00e9 [[RED]]Main verte !
 Herbalism.Skillup=[[YELLOW]]Le talent Herboristerie augmente de {0}. Total ({1})
-Mining.Ability.Length=[RED]]Dur\u00e9e de Broyeur : [[YELLOW]]{0}s
+Mining.Ability.Length=[[RED]]Dur\u00e9e de Broyeur : [[YELLOW]]{0}s
 Mining.Ability.Locked.0=VERROUILL\u00c9 AVANT 250+ (Minage explosif)
 Mining.Ability.Locked.1=VERROUILL\u00c9 AVANT 250+ (Grosses explosions)
 Mining.Ability.Locked.2=VERROUILL\u00c9 AVANT 500+ (Expert en d\u00e9molition)
@@ -211,7 +211,6 @@ Swords.Skills.SS.On=[[GREEN]]**ATTAQUE D\u00c9CHIRANTE ACTIV\u00c9E**
 Swords.Skills.SS.Refresh=[[GREEN]]Votre comp\u00e9tence [[YELLOW]]Attaque d\u00e9chirante [[GREEN]]est pr\u00eate !
 Swords.Skills.SS.Other.Off=[[RED]]Attaque d\u00e9chirante[[GREEN]] s\'est termin\u00e9 pour [[YELLOW]]{0}
 Swords.Skills.SS.Other.On=[[GREEN]]{0}[[DARK_GREEN]] a utilis\u00e9 [[RED]]Attaque d\u00e9chirante !
-Swords.Skillup=[[YELLOW]]Le talent \u00c9p\u00e9es augmente de {0}. Total ({1})
 Swords.SS.Length=[[RED]]Dur\u00e9e d\'Attaque d\u00e9chirante : [[YELLOW]]{0}s
 Taming.Ability.Bonus.0=Attentif \u00e0 l\'environnement
 Taming.Ability.Bonus.1=Les loups \u00e9vitent les dangers
@@ -311,7 +310,7 @@ Combat.Ignition=[[RED]]**ALLUMAGE**
 Combat.StruckByGore=[[RED]]**FRAPP\u00c9 JUSQU\'AU SANG**
 Combat.TargetDazed=La cible a \u00e9t\u00e9 [[DARK_RED]]\u00c9tourdi
 Combat.TouchedFuzzy=[[DARK_RED]]Vous \u00eates \u00e9tourdi.
-mcMMO.Description=[[DARK_AQUA]]A propos de [[YELLOW]]mcMMO[[DARK_AQUA]] :,[[GOLD]]mcMMO est un mod ax\u00e9 RPG et [[RED]]open source[[GOLD]] cr\u00e9e en f\u00e9vrier 2011,[[GOLD]]par [[BLUE]]nossr50[[GOLD]]. Son but est d\'offrir une exp\u00e9rience RPG de qualit\u00e9.,[[DARK_AQUA]]Notes :,[[GOLD]] - [[GREEN]]Faites [[RED]]/mcc[[GREEN]] pour afficher les commandes,[[GOLD]] - [[GREEN]]Faites [[RED]]/SKILLNAME[[GREEN]] pour afficher des informations d\u00e9taill\u00e9es,[[DARK_AQUA]]D\u00e9veloppeurs :,[[GOLD]] - [[GREEN]]nossr50 [[BLUE]](Project Lead),[[GOLD]] - [[GREEN]]GJ [[BLUE]](Senior Developer),[[GOLD]] - [[GREEN]]NuclearW [[BLUE]](Developer),[[GOLD]] - [[GREEN]]bm01 [[BLUE]](Developer),[[DARK_AQUA]]Liens :,[[GOLD]] - [[GREEN]]issues.mcmmo.org[[GOLD]] Bug tracker,[[GOLD]] - [[GREEN]]#mcmmo @ irc.esper.net[[GOLD]] Canal IRC,[[GOLD]] - [[GREEN]]http://bit.ly/H6XwFb[[GOLD]] Forum Bukkit
+mcMMO.Description=[[DARK_AQUA]]About the [[YELLOW]]mcMMO[[DARK_AQUA]] Project:,[[GOLD]]mcMMO is an [[RED]]open source[[GOLD]] RPG mod created in February 2011,[[GOLD]]by [[BLUE]]nossr50[[GOLD]]. The goal is to provide a quality RPG experience.,[[DARK_AQUA]]Tips:,[[GOLD]] - [[GREEN]]Use [[RED]]/mcc[[GREEN]] to see commands,[[GOLD]] - [[GREEN]]Type [[RED]]/SKILLNAME[[GREEN]] to see detailed skill info,[[DARK_AQUA]]Developers:,[[GOLD]] - [[GREEN]]nossr50 [[BLUE]](Project Lead),[[GOLD]] - [[GREEN]]GJ [[BLUE]](Senior Developer),[[GOLD]] - [[GREEN]]NuclearW [[BLUE]](Developer),[[GOLD]] - [[GREEN]]bm01 [[BLUE]](Developer),[[DARK_AQUA]]Useful Links:,[[GOLD]] - [[GREEN]]issues.mcmmo.org[[GOLD]] Bug Reporting,[[GOLD]] - [[GREEN]]#mcmmo @ irc.esper.net[[GOLD]] IRC Chat,[[GOLD]] - [[GREEN]]http://bit.ly/H6XwFb[[GOLD]] Bukkit Forum Thread
 Commands.Ability.Off=Utilisation des comp\u00e9tences [[RED]]Off
 Commands.Ability.On=Utilisation des comp\u00e9tences [[GREEN]]On
 Commands.AdminChat.Off=Canal admin [[RED]]Off
@@ -359,7 +358,7 @@ mcMMO.MOTD=[[BLUE]]Ce serveur utilise mcMMO {0} !\nTapez [[YELLOW]]/mcmmo[[BLUE]
 mcMMO.NoInvites=[[RED]]Vous n\'avez pas \u00e9t\u00e9 invit\u00e9
 mcMMO.NoPermission=[[DARK_RED]]Vous n\'avez pas les droits.
 mcMMO.NoSkillNote=[[DARK_GRAY]]Si vous n\'avez pas les droits pour un talent, il n\'appara\u00eetra pas ici.
-mcMMO.Wiki=[[GREEN]]http://www.mcmmo.org/wiki/[[BLUE]] - Wiki mcMMO
+mcMMO.Wiki=[[GREEN]]http://www.mcmmo.org/wiki/[[BLUE]] - mcMMO Wiki
 Commands.Party.InParty=[[GREEN]]Joueurs dans le groupe : {0}
 Party.Forbidden=[mcMMO] Les groupes ne sont pas permis dans ce monde (voir les permissions)
 Party.Help.0=[[RED]]L\'usage correct est /party <nom> pour rejoindre, et /party q pour quitter
@@ -397,7 +396,7 @@ Commands.XPGain.Swords=Attaquer des monstres
 Commands.XPGain.Taming=Apprivoiser et combattre
 Commands.XPGain.Unarmed=Attaquer des monstres
 Commands.XPGain.WoodCutting=Couper des arbres
-Commands.XPGain=[[DARK_GRAY]]XP GAIN : [[WHITE]]{0}
+Commands.XPGain=[[DARK_GRAY]]GAIN D\'XP : [[WHITE]]{0}
 Commands.xplock.locked=[[GOLD]]Votre barre d\'XP est maintenant verrouill\u00e9e sur {0} !
 Commands.xplock.unlocked=[[GOLD]]Votre barre d\'XP est maintenant [[GREEN]]D\u00c9VERROUILL\u00c9E[[GOLD]] !!
 Commands.xprate.over=[[RED]]L\u2019\u00e9v\u00e9nement de bonus d\'XP mcMMO est TERMIN\u00c9 !!
@@ -432,7 +431,7 @@ Item.Injured.Wait=Vous avez \u00e9t\u00e9 bless\u00e9 r\u00e9cemment et devez at
 Skills.Disarmed=[[DARK_RED]]Vous avez \u00e9t\u00e9 d\u00e9sarm\u00e9 !
 Skills.Header=[[RED]]-----[][[GREEN]]{0}[[RED]][]-----
 Skills.NeedMore=[[DARK_RED]]Vous devez en avoir plus
-Skills.Stats=[[YELLOW]]{0}[[GREEN]]{1}[[DARK_AQUA]] XP([[GRAY]]{2}[[DARK_AQUA]]/[[GRAY]]{3}[[DARK_AQUA]])
+Skills.Stats=[[YELLOW]]{0}[[GREEN]]{1}[[DARK_AQUA]] XP ([[GRAY]]{2}[[DARK_AQUA]]/[[GRAY]]{3}[[DARK_AQUA]])
 Skills.TooTired=[[RED]]Vous \u00eates trop fatigu\u00e9 pour r\u00e9utiliser cette comp\u00e9tence maintenant.
 Stats.Header.Combat=[[GOLD]]-=TALENTS DE COMBAT=-
 Stats.Header.Gathering=[[GOLD]]-=COMP\u00c9TENCES DE R\u00c9COLTE=-
